# coderay

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SKILLS.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.skills/coderay-navigation/: SKILL.md
assets/pages/: index.html
docs/: index.html
scripts/: config.ollama.yaml  docker-demo.sh
src/: README.md
src/coderay/chunking/: README.md  chunker.py  registry.py
src/coderay/cli/: README.md  __init__.py  commands.py  search_input.py
src/coderay/core/: README.md  config.py  errors.py  index_workspace.py  lock.py  models.py  timing.py  utils.py
src/coderay/core/defaults/: __init__.py  default.coderay.toml
src/coderay/embedding/: README.md  backend_resolve.py  base.py  format.py  local.py  mlx_backend.py  openai.py  prefixes.py
src/coderay/graph/: README.md  __init__.py  _utils.py  builder.py  code_graph.py  emit.py  extractor.py  facts.py  file_context.py  graph_builder.py  identifiers.py  impact.py  lang_constants.py  language_plugin.py  materialise.py  pipeline.py  plugin_protocol.py  project_index.py  refs.py  registry.py  resolution.py  types.py  utils.py
src/coderay/mcp_server/: README.md  errors.py  server.py
src/coderay/parsing/: README.md  base.py  builtins.py  conventions.py  cst_kind.py  cst_traversal.py  languages.py
src/coderay/pipeline/: README.md  indexer.py  watcher.py
src/coderay/retrieval/: README.md  __init__.py  boosting.py  models.py  search.py
src/coderay/skeleton/: README.md  extractor.py  path_range.py
src/coderay/state/: README.md  __init__.py  machine.py  version.py
src/coderay/storage/: README.md  lancedb.py
src/coderay/vcs/: README.md  git.py
src/indexer/: __init__.py
src/indexer/chunking/: __init__.py  chunker.py  registry.py
src/indexer/cli/: __init__.py  commands.py
src/indexer/core/: __init__.py  config.py  lock.py  models.py  timing.py  utils.py
src/indexer/embedding/: __init__.py  base.py  local.py  ollama.py  openai.py
src/indexer/graph/: __init__.py  builder.py  code_graph.py  extractor.py
src/indexer/mcp/: __init__.py  server.py
src/indexer/pipeline/: __init__.py  indexer.py
src/indexer/retrieval/: __init__.py  boosting.py  search.py
src/indexer/skeleton/: __init__.py  extractor.py
src/indexer/state/: __init__.py  machine.py  version.py
src/indexer/storage/: __init__.py  lancedb.py
src/indexer/vcs/: __init__.py  git.py
tests/: conftest.py  tree_sitter_playground.py
tests/chunking/: test_chunker.py  test_language_registry.py
tests/cli/: test_commands.py
tests/core/: test_config.py  test_errors.py  test_models.py  test_timing.py  test_utils.py
tests/embedding/: test_backend_resolve.py  test_base.py  test_local.py  test_prefixes.py
tests/fixtures/js_ts/: callbackService.ts  config.js  generatorService.ts  registry.ts  streamProcessor.ts  templateLiteralService.ts  types.ts
tests/fixtures/js_ts_production/: apiClient.ts  baseService.js  index.js  userService.js
tests/graph/: graph_sample.py  test_build_integration.py  test_builder.py  test_code_graph.py  test_emit_facts.py  test_extractor.py  test_extractor_playground.py  test_extractor_tree_sitter_integration.py  test_plugin_resolution.py  wildcard_module.py
tests/graph/handlers/: __init__.py  test_assignments.py  test_calls.py  test_definitions.py  test_imports.py  test_imports_js.py  test_type_resolution.py
tests/integration/: test_cli.py  test_fixture_apps_graph.py  test_graph_build.py  test_js_ts_production.py  test_search.py
tests/integration/chunking/: test_chunking_fixture_apps.py
tests/integration/graph/: test_fixture_apps_graph_contracts.py
tests/integration/skeleton/: test_js_ts_extractor.py  test_py_extractor.py
tests/mcp_server/: test_server.py
tests/pipeline/: test_indexer.py  test_watcher.py
tests/regression/: conftest.py
tests/regression/chunking/: __init__.py  expected_py_app_chunks.py  test_chunking_fixture_apps.py
tests/regression/graph/: test_fixture_apps_graph_contracts.py  test_fixture_py_app.py
tests/regression/retrieval/: test_search_smoke.py
tests/regression/skeleton/: conftest.py  test_js_ts_extractor.py  test_py_extractor.py  test_skeleton_line_range.py
tests/retrieval/: test_boosting.py  test_deduplication.py  test_models.py  test_search_integration.py
tests/skeleton/: canonical_concepts.ts  conftest.py  test_extractor.py  test_js_ts_extractor.py  test_py_extractor.py  test_py_extractor.py.py
tests/state/: test_machine.py
tests/storage/: test_hybrid_search.py  test_lancedb.py  test_score_extraction.py
tests/unit/: conftest.py  test_boosting.py  test_chunker.py  test_code_graph.py  test_config.py  test_embedder.py  test_git.py  test_graph_builder.py  test_graph_extractor.py  test_hybrid_search.py  test_index_version.py  test_language_registry.py  test_local_embedder.py  test_lock.py  test_mcp_tools.py  test_models.py  test_ollama_embedder.py  test_pipeline.py  test_skeleton.py  test_state.py  test_store.py  test_timing.py  test_utils.py
tests/unit/chunking/: test_language_registry.py
tests/unit/cli/: test_commands.py
tests/unit/core/: test_config.py  test_index_workspace.py  test_lock.py  test_models.py  test_timing.py
tests/unit/embedding/: test_base.py  test_format.py  test_local.py  test_prefixes.py
tests/unit/graph/: test_callee_resolver.py  test_code_graph.py  test_handler_helpers.py  test_impact.py  test_materialise.py  test_project_index.py  test_python_extractor.py  test_refs.py  test_resolve_bare_phantoms.py
tests/unit/mcp_server/: test_server.py
tests/unit/parsing/: test_cst_kind.py
tests/unit/pipeline/: test_deindexing.py  test_indexer.py  test_watcher.py
tests/unit/retrieval/: test_boosting.py  test_deduplication.py
tests/unit/skeleton/: test_path_range.py
tests/unit/state/: test_machine.py  test_version.py
tests/unit/vcs/: test_git.py
tests/vcs/: test_git.py
(+136 files in other folders)
