[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-code-indexer"
version = "1.0.0"
description = "Local semantic code indexer with tree-sitter chunking, code graphs, and MCP server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.25.0",
    "lancedb>=0.5.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "filelock>=3.0",
    "fastembed>=0.4.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
ollama = ["httpx>=0.27.0"]
languages = [
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]
maintain = [
    "pylance>=0.15.0",
]
all = [
    "semantic-code-indexer[openai,ollama,languages,mcp,dev,maintain]",
]

[project.scripts]
index = "indexer.cli.commands:main"
index-mcp = "indexer.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["indexer"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
