[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coderay"
version = "1.0.0"
description = "X-ray your codebase — semantic search, code graphs, file skeletons, and MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Bogdan Copocean", email = "bogdancopocean@gmail.com"},
]
keywords = ["semantic-search", "code-indexer", "mcp", "code-graph", "ai-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.25.0",
    "lancedb>=0.5.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "filelock>=3.0",
    "fastembed>=0.4.0",
    "watchdog>=4.0.0",
    "pathspec>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/bogdan-copocean/coderay"
Repository = "https://github.com/bogdan-copocean/coderay"
Issues = "https://github.com/bogdan-copocean/coderay/issues"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
languages = [
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]
maintain = [
    "pylance>=0.15.0",
]
all = [
    "coderay[openai,languages,mcp,dev,maintain]",
]

[project.scripts]
coderay = "coderay.cli.commands:main"
coderay-mcp = "coderay.mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["coderay"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
